# holon

./: .gitignore  README.md  README_ko.md  proofs_report_complete_code.md
fpphysics/: FINAL_VERDICT_ko.md  README.md  pyproject.toml
fpphysics/docs/: 00_EXECUTIVE_SUMMARY_ko.md  01_SCIENTIFIC_SCOPE_AND_STATUS_ko.md  02_ENGINE_ARCHITECTURE_ko.md  03_MODEL_REGISTRY_ko.md  04_RESULTS_MATRIX_ko.md  05_BLIND_PROTOCOL_ko.md  06_EXTERNAL_HOLDOUT_AUDIT_ko.md  07_REPRODUCIBILITY_ko.md  08_DATA_DICTIONARY_ko.md  09_RESEARCH_ROADMAP_ko.md  10_TOP_CANDIDATE_CLASSES_ko.md  11_SURPRISING_CANDIDATES_EXPLAINED_ko.md  20260624_MICROSCOPIC_ISDLC_SESSION_ko.md  INDEX_ko.md
fpphysics/examples/: auto_discover.py  run_analysis.py  run_autodiscovery.py  run_autodiscovery_focused.py  run_blind_cabibbo_clock.py  run_blind_challenge.py  run_blind_success.py  run_discovery.py  run_frozen_blind_candidate.py  validate_isdlc_tcps.py
fpphysics/fpphysics/: __init__.py  academic_external_holdout.py  academic_external_holdout_cli.py  accelerators.py  autodiscovery.py  autodiscovery_cli.py  blind_cabibbo.py  blind_cabibbo_cli.py  blind_cli.py  blind_protocol.py  blind_success.py  blind_success_cli.py  candidate_models.py  cli.py  constants.py  cosmology.py  discover_cli.py  discovery_cli.py  engine.py  final_cli.py  frozen_blind_candidate.py  frozen_blind_candidate_cli.py  gpu_holdout_search.py  microscopic_lab.py  report.py  rge.py  sm.py  theory_lab.py  theory_lab_cli.py
fpphysics/papers/: isdlc-line-code-gauge-couplings-v0.1.md  isdlc-line-code-gauge-couplings-v0.2.md
ocean/: README_ko.md  (+1 more)
(+205 files in other folders)
